crates/ink/tests/ui/contract/fail/message-allow-reentrancy-invalid.rs
#[ink::contract]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message, allow_reentrancy = true)]
        pub fn message(&self) {}
    }
}

fn main() {}
